alternado o body e o titulo

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 </head>
 <body>
     <div class="square">
-        <h1 class="title">Branch: Main</h1>
+        <h1 class="title">Branch: Body</h1>
         <ul>
             <h2>Colaboradores:</h2>
-            <li>Pedro Henrique
-            </li>
+            <li>Pedro Henrique</li>
+            <li>Rodrigo Santos</li>
         </ul>
     </div>
 
