--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="square">
-        <h1 class="title">Branch: Body</h1>
+        <h1 class="title">Branch: Modificado</h1>
         <ul>
             <h2>Colaboradores:</h2>
             <li>Pedro Henrique</li>
